# crossbar-fabric-cli

./: .appveyor.yml  .gitignore  .pylintrc  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  MANUAL.md  Makefile  README.md  README.rst  TODO.md  cbf-history  requirements-dev.txt  requirements-rtd.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
cbsh/: __init__.py  _version.py  app.py  cli.py  client.py  command.py  config.py  extract.py  fbs.py  flatbuffers.py  key.py  quickstart.py  repl.py  util.py  xidl.py
cbsh/idl/: __init__.py  generator.py  loader.py  reflection.bfbs
cbsh/reflection/: Schema.py  __init__.py
cbsh/test/: test_util.py
crossbar-fabric-cli/: main.py
crossbarfabriccli/: TODO.md  __cli.py  __client.py  __init__.py  _version.py  app.py  cli.py  client.py  command.py  config.py  key.py  main.py  repl.py  session.py  util.py
crossbarfabriccli/cmd/: __init__.py
crossbarfabricshell/: __init__.py  _version.py  app.py  cli.py  client.py  command.py  config.py  key.py  quickstart.py  repl.py
docker/: Dockerfile
docs/: Makefile  conf.py  contents.rst  installation.rst  interfaces.rst  templates.rst  workflow.rst
sphinxcontrib/: __init__.py  xbr.py
sphinxcontrib/xbr/: __init__.py
test/: test_idspec.py
tests/: Makefile  conf.py  index.rst
tests/idl/: example.fbs  example.json  example.rst
