[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cbsh sphinxcontrib
namespace_packages =
    sphinxcontrib

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[mypy]
python_version = 3
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
